Feature/optimizing price offer persitence (#84)
* Refactoring code for persisting price offer.

* Tailored sql scripts for discount for faster test runs.

* Code clean up.

* Removed unnecessary sales office parameter when getting material infor from SAP.